--- a/NOVA/Views/Home/NovaAsistan/Asistan.cshtml
+++ b/NOVA/Views/Home/NovaAsistan/Asistan.cshtml
@@ -2,7 +2,7 @@
 <link href="~/Scripts/bootstrap-icon.css" rel="stylesheet" />
 @if (Session["SupernovaYetki"] == "true")
 {
-    <div id="body" style="z-index: 200;font-size:small;position:sticky;top:0;">
+    <div id="asistan" style="z-index: 4500;font-size:small;position:sticky;top:0;">
         <div id="chat-circle" class="btn btn-raised p-0" data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="left" data-bs-html="true" data-bs-original-title="<span>Supernova'ya Sor</span>">
             <div id="chat-overlay"></div>
             <img src="~/Content/Images/Asistan.png" class="rounded-circle" style="height:3.7rem;" />
@@ -150,6 +150,7 @@
             $(".chat-box").toggle('scale');
 
             $('body').css('overflow-y', 'hidden');
+            $('#asistan').css('z-index', '6250');
 
             $('#SupernovaStatus').html('Yazıyor...');
 
@@ -166,6 +167,7 @@
             $(".chat-box").toggle('scale');
 
             $('body').css('overflow-y', 'auto');
+            $('#asistan').css('z-index', '4500');
 
             $('.chat-logs').html('');
             $('#chat-input').val('');
