--- a/NOVA/Views/Satis/FabrikaStok.cshtml
+++ b/NOVA/Views/Satis/FabrikaStok.cshtml
@@ -13,6 +13,8 @@
 <script src="~/Scripts/select2.min.js"></script>
 <script src="~/assets/vendor/libs/popper/popper.js"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
+
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <style>
     body {
         padding: 0 0 0 3rem !important;
@@ -292,9 +294,10 @@
                        data-buttons-order="['paginationSwitch', 'columns', 'filterTable']"
                        data-toggle="table"
                        data-toolbar="#toolbar"
-                       data-show-export="false"
+                       data-show-export="true"
                        data-export-data-type="all"
-                       data-export-types="['excel', 'pdf']"
+                       data-export-types="['xlsx']"
+                       data-export-options='{"fileName": "Fabrika_Stok"}'
                        data-pagination="false"
                        data-search="true"
                        data-show-columns="true"
@@ -356,17 +359,9 @@
     </div>
 </div>
 <script>
-    if ($(window).width() < 600) {
-        $("#divPartial2").show();
-        document.getElementById("satis").className = "menu-item open active";
-        document.getElementById("fabstokfiyatli").className = "menu-item active";
-    }
-    else {
+
         $("#divPartial").show();
 
-        document.getElementById("satis1").className = "nav__link active";
-        document.getElementById("fabstokfiyatli1").className = "nav__dropdown-item active";
-    }
 
 
     var tumliste2 = null;
