--- a/NOVA/Views/Satis/Teklif.cshtml
+++ b/NOVA/Views/Satis/Teklif.cshtml
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
 
+    <link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <style>
 
 
@@ -608,16 +609,9 @@
         var caridata = null;
         var pladata = null;
         $(document).ready(function () {
-            if ($(window).width() < 600) {
-                $("#divPartial2").show();
-                document.getElementById("satis").className = "menu-item open active";
-                document.getElementById("teklif").className = "menu-item active";
-            }
-            else {
+          
                 $("#divPartial").show();
-                document.getElementById("satis").className = "nav__link active";
-                document.getElementById("teklif1").className = "nav__dropdown-item active";
-            }
+            
 
             $('#table').bootstrapTable('hideColumn', 'KUR');
             $('#table').bootstrapTable('hideColumn', 'STHAR_DOVFIAT');
