--- a/NOVA/Views/Satis/Tekliflerim.cshtml
+++ b/NOVA/Views/Satis/Tekliflerim.cshtml
@@ -16,6 +16,8 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
+
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <style>
 
     .card-view {
@@ -294,18 +296,10 @@
     </div>
 </div>
 <script>
-    if ($(window).width() < 600) {
-        $("#divPartial2").show();
-        document.getElementById("satis").className = "menu-item open active";
-        document.getElementById("detaylisip").className = "menu-item active";
-    }
-    else {
+ 
         $("#divPartial").show();
 
-        document.getElementById("satis1").className = "nav__link active";
-        document.getElementById("tekliflerim1").className = "nav__dropdown-item active";
-    }
-
+     
 
     var tumliste2 = null;
     var tumliste = null;
