--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -15,6 +15,8 @@
 <script src="~/assets/sweetalert/sweetalert.js"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
+
 <style>
     body {
         padding: 0 0 0 4rem !important;
@@ -363,17 +365,9 @@
         allOptions.appendTo("#cari");
     }
 
-    if ($(window).width() < 600) {
-        $("#divPartial2").show();
-        document.getElementById("sevkiyat").className = "menu-item open active";
-        document.getElementById("saticisiprap").className = "menu-item active";
-    }
-    else {
+  
         $("#divPartial").show();
 
-        document.getElementById("sevkiyat1").className = "nav__link active";
-        document.getElementById("saticisiprap1").className = "nav__dropdown-item active";
-    }
 
     var type = 'fa'
 
