--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -42,6 +42,8 @@
                 text-decoration: none;
             }
     </style>
+    <link href="~/assets/boxicons/css/boxicons.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.7.1.js"></script>
 </head>
 <body>
 
