--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -5,13 +5,14 @@
     <meta charset="utf-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
+    <meta http-equiv="Access-Control-Allow-Origin" content="http://192.168.2.13" />
     <title>Nova | Efece Galvaniz</title>
 
     <link rel="icon" type="image/x-icon" href="/assets/img/icons/brands/Nova_White.png" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <link href="\assets\boxicons-2.1.2\css\animations.css" rel="stylesheet" type="text/css" />
-    <link href="\assets\boxicons-2.1.2\css\transformations.css" rel="stylesheet" type="text/css" />
+    <link href="\assets\boxicons\css\animations.css" rel="stylesheet" type="text/css" />
+    <link href="\assets\boxicons\css\transformations.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
