--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -36,7 +36,8 @@
     <link href="~/Content/bootstrap-table-master/dist/bootstrap-table.min.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-table-master/dist/extensions/sticky-header/bootstrap-table-sticky-header.css" rel="stylesheet" />
     <script src="~/Scripts/sweetAlert.js"></script>
-    
+
+    <script src="~/Scripts/jquery-3.6.1.js"></script>
 
     <style>
         .bootstrap-table .table > tbody > tr.group-by.expanded,
