--- a/NOVA/Views/Uretim/IsEmri.cshtml
+++ b/NOVA/Views/Uretim/IsEmri.cshtml
@@ -21,6 +21,8 @@
     <link href="~/footable/css/footable.core.bootstrap.css" rel="stylesheet" />
     <link href="~/footable/css/footable.paging.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
     <style>
         body {
             padding: 0 0 0 3rem !important;
@@ -96,8 +98,6 @@
     <script src="~/footable/js/footable.core.js"></script>
     <script src="~/footable/js/footable.paging.js"></script>
     <script>
-        document.getElementById("uretim").className = "menu-item open active";
-        document.getElementById("isemri").className = "menu-item active";
         jQuery(document).ready(function () {
 
             jQuery.getJSON('http://192.168.2.13:83/api/IsEmri/VW', function (data) {
