--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Scripts/bootstrap-table.min.css" rel="stylesheet" />
     <link href="~/Scripts/select2.css" rel="stylesheet" />
     <script src="~/Scripts/select2.min.js"></script>
+    <link href="~/bootstrap-icons-1.11.2/font/bootstrap-icons.min.css" rel="stylesheet" />
 
     <style>
         .no-records-found {
@@ -6252,12 +6253,14 @@
     </div>
 
     <script src="~/Scripts/sweetAlert.js"></script>
-    <script src="~/Scripts/tableExport.min.js"></script>
-    <script src="~/Scripts/jsPDF.js"></script>
-    <script src="~/Scripts/jsPDF-autotable.js"></script>
-    <script src="~/Scripts/bootstrap-table.min.js"></script>
-    <script src="~/Scripts/tableExport.min.js"></script>
-    <script src="~/Scripts/table-filter.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/tableExport.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF/jspdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tableexport.jquery.plugin@1.10.21/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/export/bootstrap-table-export.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
+    <script src="~/Content/bootstrap-table-master/src/locale/bootstrap-table-tr-TR.js"></script>
+    <script src="~/Scripts/xlsx.core.min.js"></script>
 
 
 
