--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -82,6 +82,8 @@
     }
 </style>
 <link href="~/Content/fontawesome/css/all.min.css" rel="stylesheet" />
+
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <body>
     <div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
         <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
@@ -167,9 +169,6 @@
                     <script>
 
                         $("#divPartial").show();
-
-                        document.getElementById("satis1").className = "nav__link active";
-                        document.getElementById("ziyaretplanlari1").className = "nav__dropdown-item active";
 
 
                         function musteritakip() {
