--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -27,6 +27,7 @@
 
 <script src="~/Scripts/instascan.min.js"></script>
 
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <script>
     function ShowProgress() {
         document.body.style.overflow = 'hidden';
@@ -63,17 +64,10 @@
     $(document).ready(() => {
         $('#pageName').html('<div class="dot"></div> Depo Transfer')
     })
-    if ($(window).width() < 600) {
-        $("#divPartial2").show();
-        document.getElementById("sevkiyat").className = "menu-item open active";
-        document.getElementById("depotransfer1").className = "menu-item active";
-    }
-    else {
-        $("#divPartial").show();
 
-        document.getElementById("sevkiyat1").className = "nav__link active";
-        document.getElementById("depotransfer1").className = "nav__dropdown-item active";
-    }
+    $("#divPartial").show();
+
+
 </script>
 
 <style>
