--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -13,6 +13,8 @@
 <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<link href="~/assets/boxicons/css/boxicons.min.css" rel="stylesheet" />
 <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
 <style>
     body {
@@ -261,17 +263,10 @@
 </script>
 
 <script>
-    if ($(window).width() < 600) {
-        $("#divPartial2").show();
-        document.getElementById("sevkiyat").className = "menu-item open active";
-        document.getElementById("sevkmalkabul").className = "menu-item active";
-    }
-    else {
+  
         $("#divPartial").show();
 
-        document.getElementById("sevkiyat1").className = "nav__link active";
-        document.getElementById("sevkmalkabul1").className = "nav__dropdown-item active";
-    }
+     
 
     var type = 'fa';
 
